// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Autocomplete component > when articles are NOT passed > should match renderMenu snapshot 1`] = `<React.Fragment />`;

exports[`Autocomplete component > when articles are not passed > should match renderMenu snapshot 1`] = `<React.Fragment />`;

exports[`Autocomplete component > when articles are passed > should match renderMenu snapshot 1`] = `
<div
  className="input-suggestions"
  style={{}}
>
  <a
    className="search-link"
    href="/search?query=undefined"
  >
    See all results
  </a>
</div>
`;

exports[`Autocomplete component > when getItemValue is called > should return label 1`] = `"test"`;

exports[`Autocomplete component > when renderItem prop is called > when item is NOT highlighted > should match renderMenu snapshot 1`] = `
<div
  className="input-suggestions-item"
  style={
    {
      "backgroundColor": "transparent",
    }
  }
>
  <a
    href={1}
    target="_blank"
  >
    test
  </a>
</div>
`;

exports[`Autocomplete component > when renderItem prop is called > when item is highlighted > should match renderMenu snapshot 1`] = `
<div
  className="input-suggestions-item"
  style={
    {
      "backgroundColor": "#eee",
    }
  }
>
  <a
    href={1}
    target="_blank"
  >
    test
  </a>
</div>
`;

exports[`Autocomplete component > without props > should match snapshot 1`] = `ShallowWrapper {}`;
